city game(scores in menu)

--- a/app/src/main/res/drawable/border_miejsce.xml
+++ b/app/src/main/res/drawable/border_miejsce.xml
@@ -3,5 +3,5 @@
     <stroke
         android:width="2dp"
         android:color="?colorOnSecondary" />
-    <solid android:color="@color/yellowBook" />
+    <solid android:color="?colorSecondaryVariant" />
 </shape>
