--- a/app/src/main/res/layout/action_item.xml
+++ b/app/src/main/res/layout/action_item.xml
@@ -37,18 +37,17 @@
             </FrameLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="25dp"
-                    android:layout_weight="1"
                     app:srcCompat="@drawable/ic_baseline_place_black" />
 
 
@@ -62,7 +61,10 @@
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
+
             </LinearLayout>
+
+
 
         </LinearLayout>
 
