--- a/app/src/main/res/drawable-v24/bg_round_popup_back.xml
+++ b/app/src/main/res/drawable-v24/bg_round_popup_back.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="?colorSecondaryVariant"/>
-    <stroke android:width="0dp" android:color="@color/gray"/>
-    <corners android:radius="10dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="?colorSecondaryVariant"/>
+            <stroke android:width="0dp" android:color="@color/gray"/>
+            <corners android:radius="10dp" />
+        </shape>
+    </item>
+</layer-list>
