--- a/app/src/main/res/drawable/bg_round_gray2.xml
+++ b/app/src/main/res/drawable/bg_round_gray2.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="?colorSecondaryVariant"/>
+    <solid android:color="@color/gray"/>
     <corners android:radius="10dp" />
-    <stroke android:width="3dp" android:color="#494848"/>
 </shape>
