--- a/app/src/main/res/layout/fragment_add_action.xml
+++ b/app/src/main/res/layout/fragment_add_action.xml
@@ -14,39 +14,50 @@
         android:layout_height="wrap_content">
 
         <Spinner
-            android:id="@+id/places_spinner"
+            android:id="@+id/placesSpinner"
             android:layout_width="match_parent"
             android:background="?colorPrimaryVariant"
             android:layout_height="40dp"
             android:spinnerMode="dropdown"/>
     </LinearLayout>
 
-    <Spinner
-        android:id="@+id/typeOfActionSpinner"
+    <LinearLayout
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:background="?colorPrimaryVariant"
-        android:layout_height="40dp"
-        android:spinnerMode="dropdown"/>
+        android:layout_height="wrap_content">
 
+        <Spinner
+            android:id="@+id/typeOfActionSpinner"
+            android:layout_width="match_parent"
+            android:background="?colorPrimaryVariant"
+            android:layout_height="40dp"
+            android:spinnerMode="dropdown"/>
+    </LinearLayout>
 
-    <Spinner
-        android:id="@+id/contacts_spinner"
+    <LinearLayout
+        android:id="@+id/contactsLayout"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="?colorPrimaryVariant"
-        android:spinnerMode="dropdown"/>
+        android:layout_height="wrap_content">
+
+        <Spinner
+            android:id="@+id/contactsSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="?colorPrimaryVariant"
+            android:spinnerMode="dropdown"/>
+    </LinearLayout>
 
 
     <LinearLayout
+        android:id="@+id/smsTextLayout"
         android:layout_marginVertical="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?colorPrimaryVariant">
 
         <EditText
-            android:id="@+id/smsText"
+            android:id="@+id/smsTextEt"
             android:layout_marginHorizontal="10dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
