--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,31 +9,39 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="?colorSecondary"
         tools:context=".HomeFragments.SettingsFragment">
 
-        <TextView
-            android:layout_marginVertical="20dp"
-            android:layout_marginStart="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/gray"
-            android:text="@string/language"
-            android:layout_marginBottom="10dp"
-            android:textSize="20sp" />
-
         <LinearLayout
+            android:id="@+id/languageChange"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp">
-            <Spinner
-                android:id="@+id/languagesSpinner"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_marginVertical="20dp"
+                android:layout_marginStart="15dp"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="?colorPrimaryVariant"
-                android:spinnerMode="dropdown"/>
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray"
+                android:text="@string/language"
+                android:layout_marginBottom="10dp"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp">
+                <Spinner
+                    android:id="@+id/languagesSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="?colorPrimaryVariant"
+                    android:spinnerMode="dropdown"/>
+            </LinearLayout>
+
         </LinearLayout>
 
 
