--- a/app/src/main/res/layout/provide_label_layout.xml
+++ b/app/src/main/res/layout/provide_label_layout.xml
@@ -4,90 +4,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:backgroundTint="@android:color/transparent"
-    android:background="@drawable/bg_round_popup_back">
+    android:background="?colorSecondaryVariant">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="10dp">
+        <TextView
+            android:textSize="30sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="-4dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/bg_round_label_back">
+            android:textColor="@color/white"
+            android:text="@string/label"/>
+    </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:textSize="20sp"
-                android:text="@string/label"
-                tools:ignore="PrivateResource" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="27dp"
+        android:background="@drawable/bg_round_provide_label">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:textSize="20sp"
-                android:text=""/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="5dp"
-            android:background="@drawable/bg_round_provide_label">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/provide_label"
-                android:backgroundTint="@android:color/transparent"
-                android:id="@+id/provideLabel"
-                android:textColorHint="@color/gray"
-                android:inputType="textPersonName"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
-
-        <CheckBox
-            android:id="@+id/checkBox"
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/use_the_default_value" />
+            android:hint="@string/provide_label"
+            android:backgroundTint="@android:color/transparent"
+            android:id="@+id/provideLabel"
+            android:textColorHint="@color/gray"
+            android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
-       <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_gravity="center"
-           android:layout_marginBottom="20dp"
-           android:orientation="horizontal">
+    </LinearLayout>
 
-           <Button
-               android:id="@+id/buttonCancel"
-               app:backgroundTint="@null"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginEnd="40dp"
-               android:textSize="13sp"
-               android:text="@string/cancel"
-               android:layout_gravity="center"
-               android:background="@drawable/bg_round_btn_back"/>
 
-           <Button
-               android:id="@+id/buttonOk"
-               app:backgroundTint="@null"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:textSize="13sp"
-               android:layout_gravity="center"
-               android:text="@string/ok"
-               android:background="@drawable/bg_round_btn_back"/>
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_marginHorizontal="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="@string/use_the_default_value" />
 
-       </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/buttonCancel"
+            android:layout_marginStart="27dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel"
+            android:background="@drawable/bg_round_btn_back"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/buttonOk"
+            android:layout_marginEnd="27dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ok"
+            android:background="@drawable/bg_round_btn_back"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
 
 </LinearLayout>
