--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -206,6 +206,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/stopStartBtnLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -236,6 +237,29 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_marginVertical="20dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_width="match_parent"
+                android:background="@drawable/bg_round_pastel_blue_no_border"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+
+                <Switch
+                    android:id="@+id/locationTrackingSwitch"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="?colorOnPrimary"
+                    android:text="Śledzenie lokalizacji"
+                    android:textSize="20sp"
+                    tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+            </LinearLayout>
+
             <Button
                 android:id="@+id/deleteAllFromDatabase"
                 android:layout_width="wrap_content"
@@ -244,6 +268,7 @@
                 android:layout_gravity="bottom|center"
                 android:layout_marginBottom="20dp"
                 android:text="@string/delete_all_data_from_app"/>
+
         </LinearLayout>
 
 
