--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -238,6 +238,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/locationTrackingLayout"
                 android:layout_marginVertical="20dp"
                 android:layout_marginHorizontal="10dp"
                 android:layout_width="match_parent"
